[gd_scene load_steps=14 format=3 uid="uid://dfttjwyiu5r52"]

[ext_resource type="Script" path="res://cards/scenes/card2d_scene.gd" id="1_gl755"]
[ext_resource type="Texture2D" uid="uid://d2gw53ihu5rin" path="res://cards/assets/card.png" id="2_umcw8"]
[ext_resource type="Shader" path="res://common/background.gdshader" id="3_k3vph"]
[ext_resource type="Script" path="res://common/background.gd" id="4_385ld"]
[ext_resource type="TileSet" uid="uid://biisv2bncp16r" path="res://common/tiles.tres" id="5_ugfju"]

[sub_resource type="Gradient" id="Gradient_sgjsm"]
offsets = PackedFloat32Array(0, 0.25, 0.5, 0.75, 1)
colors = PackedColorArray(0.571931, 0.484295, 0.578274, 1, 0.796078, 0.47451, 0, 1, 0.382133, 0.487668, 0.460821, 1, 1, 1, 1, 1, 0.571931, 0.484295, 0.578274, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_sbxmu"]
gradient = SubResource("Gradient_sgjsm")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xm1lh"]
shader = ExtResource("3_k3vph")
shader_parameter/speed_scale = 0.079
shader_parameter/gradient = SubResource("GradientTexture1D_sbxmu")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_wxq2s"]
seed = 2
frequency = 0.0205
fractal_type = 0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_nswng"]
width = 1152
height = 864
generate_mipmaps = false
seamless = true
normalize = false
noise = SubResource("FastNoiseLite_wxq2s")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o2n6o"]
bg_color = Color(0.00392157, 0.00392157, 0.00392157, 0.835294)
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e08yl"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ralhl"]
bg_color = Color(0.00392157, 0.00392157, 0.00392157, 0.835294)
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Card" type="AspectRatioContainer"]
offset_right = 128.0
offset_bottom = 190.0
pivot_offset = Vector2(64, 150)
mouse_filter = 0
script = ExtResource("1_gl755")

[node name="Container2" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(128, 190)
layout_mode = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="CardFace" type="TextureRect" parent="Container2"]
visible = false
clip_children = 2
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
mouse_filter = 2
texture = ExtResource("2_umcw8")
expand_mode = 3
stretch_mode = 2

[node name="RareShine" type="TextureRect" parent="Container2/CardFace"]
material = SubResource("ShaderMaterial_xm1lh")
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("NoiseTexture2D_nswng")
expand_mode = 5
stretch_mode = 1
script = ExtResource("4_385ld")
color1 = Color(0.571931, 0.484295, 0.578274, 1)
color2 = Color(0.796078, 0.47451, 0, 1)
color3 = Color(0.382133, 0.487668, 0.460821, 1)
color4 = Color(1, 1, 1, 1)
gradient_speed = 0.079
frequency = 0.205

[node name="Container" type="MarginContainer" parent="Container2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Container2/Container"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 2

[node name="TitlePanel" type="PanelContainer" parent="Container2/Container/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o2n6o")

[node name="TitleContainer" type="MarginContainer" parent="Container2/Container/VBoxContainer/TitlePanel"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="CardTitle" type="RichTextLabel" parent="Container2/Container/VBoxContainer/TitlePanel/TitleContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
mouse_filter = 2
text = "Default Card"
fit_content = true
scroll_active = false

[node name="TilePanel" type="PanelContainer" parent="Container2/Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e08yl")

[node name="TileContainer" type="MarginContainer" parent="Container2/Container/VBoxContainer/TilePanel"]
clip_children = 2
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="CardTileMap" type="TileMapLayer" parent="Container2/Container/VBoxContainer/TilePanel/TileContainer"]
scale = Vector2(1.99824, 1.99824)
tile_map_data = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 2, 0, 0, 0, 1, 0, 1, 0, 0, 0, 2, 0, 1, 0, 0, 0, 1, 0, 37, 0, 0, 0, 4, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 4, 0, 2, 0, 0, 0, 1, 0, 1, 0, 0, 0)
tile_set = ExtResource("5_ugfju")

[node name="PanelContainer" type="PanelContainer" parent="Container2/Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ralhl")

[node name="MarginContainer2" type="MarginContainer" parent="Container2/Container/VBoxContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="CardDesc" type="RichTextLabel" parent="Container2/Container/VBoxContainer/PanelContainer/MarginContainer2"]
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 12
text = "Could be better."
fit_content = true
scroll_active = false
